<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/activity_back_color"
    android:stretchColumns="1" >

    <TextView
        style="@style/TitleTextFont"
        android:text="@string/new_word_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableRow android:layout_marginTop="5dp" >

        <TextView
            style="@style/TipTextFont"
            android:gravity="center"
            android:text="@string/name" />

        <EditText android:id="@+id/new_word_name" />
    </TableRow>

    <TableRow android:layout_marginTop="5dp" >

        <TextView
            style="@style/TipTextFont"
            android:gravity="center"
            android:text="@string/new_word_meaning" />

        <EditText android:id="@+id/new_word_meaning" />
    </TableRow>

    <TableRow android:layout_marginTop="5dp" >

        <TextView
            style="@style/TipTextFont"
            android:gravity="center"
            android:text="@string/new_word_sample" />

        <EditText android:id="@+id/new_word_sample" 
            android:minLines="2"/>
    </TableRow>

    <TableRow android:layout_marginTop="5dp" >

        <TextView
            style="@style/TipTextFont"
            android:gravity="center"
            android:text="@string/memo" />

        <EditText
            android:id="@+id/new_word_memo"
            android:minLines="5" />
    </TableRow>

</TableLayout>