<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/activity_back_color"
    android:orientation="vertical" >

    <TextView
        style="@style/TitleTextFont"
        android:text="@string/word_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="50dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/word_translate"
                style="@style/AppText"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:background="@color/blue"
                android:text="@string/translate_label" />

            <TextView
                android:id="@+id/word_speech"
                style="@style/AppText"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:background="@color/green"
                android:text="@string/speech_label" />
        </LinearLayout>

        <TextView
            android:id="@+id/word_notebook"
            style="@style/AppText"
            android:layout_width="fill_parent"
            android:background="@color/orange"
            android:text="@string/word_notebook_label" />
    </LinearLayout>

</RelativeLayout>