<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/activity_back_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/book_search_result_tab_bookBasicInfo"
            style="@style/TabTitleFont"
            android:text="@string/book_search_result_tab_bookBasicInfo"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/book_search_result_tab_bookPrices"
            style="@style/TabTitleFont"
            android:text="@string/book_search_result_tab_bookPrices"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/book_search_result_tab_bookReviews"
            style="@style/TabTitleFont"
            android:text="@string/book_search_result_tab_bookReviews"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <ImageView
        android:id="@+id/book_search_result_cursor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/book_search_result_cursor_desc"
        android:scaleType="matrix"
        android:src="@drawable/cursor" />

    <android.support.v4.view.ViewPager
        android:id="@+id/book_search_result_viewPager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>