<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/activity_back_color"
    android:orientation="vertical" >

    <TextView
        style="@style/TitleTextFont"
        android:text="@string/about_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/margin_all_direction"
        android:gravity="center" >

        <TextView
            android:id="@+id/about_textview_version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/about_layout_author_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_textview_version"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/about_layout_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_height"
                android:gravity="center_horizontal"
                android:text="@string/about_author_info"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/about_layout_author_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_height"
                android:gravity="center_horizontal"
                android:text="@string/about_author_email"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_layout_author_layout"
            android:layout_marginTop="@dimen/margin_top_larger_height"
            android:gravity="left"
            android:text="@string/about_app_help"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>